--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,23 @@ services:
       - "4317:4317" # OTLP/GRPC
       - "4318:4318" # OTLP/HTTP
 
+  api-gateway:
+    image: kong:3.9
+    environment:
+      - KONG_DATABASE=off
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_ADMIN_GUI_URL=http://localhost:8002
+      - KONG_DECLARATIVE_CONFIG=/kong/config.yaml
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - "8000:8000" # Proxy
+      - "8001:8001" # Admin
+      - "8002:8002" # UI
+      - "8443:8443" # Proxy SSL
+      - "8444:8444" # Api admin SSL
+    volumes:
+      - "./docker/kong/config.yaml:/kong/config.yaml"
+
 volumes:
   rabbitmq_data:
